--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -1,2 +1,3 @@
 guides:
-  - a4547555-bad4-4ed9-b0b8-3084f6a2f914.yaml
+  - a4547555-bad4-4ed9-b0b8-3084f6a2f914
+  - guide-name-new-onedodao-academy.yaml
