--- a/src/intro-to-options-dodao-academy.yaml
+++ b/src/intro-to-options-dodao-academy.yaml
@@ -216,9 +216,23 @@ steps:
             key: A
           - content: The put will be exercised and trader earns a profit of $15 per share.
             key: B
-          - content: The call will not be executed
+          - content: The call will not be executed and trader losses the premium.
             key: C
-          - content: The put will not be executed
+          - content: The put will not be executed and trader losses the premium.
+            key : D
+      - uuid: 34dbb4f4-118b-44fe-a9c9-28f45ad48a4a
+        content: If you buy a call option on $115, and at expiration the market price is $100,
+        answerKeys:
+          - C
+        type: SingleChoice
+        choices:
+          - content: The call will be executed and trader earns a profit of $15 per share.
+            key: A
+          - content: The put will be exercised and trader earns a profit of $15 per share.
+            key: B
+          - content: The call will not be executed and trader losses the premium.
+            key: C
+          - content: The put will not be executed and trader losses the premium.
             key : D
   
   - uuid: 6f0fc5b8-a0f3-4a16-bcf0-26834b939d83
@@ -271,7 +285,7 @@ steps:
           - content: Not Bullish
             key : D
       - uuid: bc71fde8-8201-4537-ac7e-0a77ce8aa274
-        content: If you buy a put option on 115, and at expiration the market price is 100,
+        content: If you buy a put option on $115, and at expiration the market price is $100,
         answerKeys:
           - B
         type: SingleChoice
@@ -280,9 +294,23 @@ steps:
             key: A
           - content: The put will be executed and trader earns a profit of $15 per share.
             key: B
-          - content: The call will not be executed.
+          - content: The call will not be executed and trader losses the premium..
             key: C
-          - content: The put will not be executed.
+          - content: The put will not be executed and trader losses the premium..
+            key : D
+      - uuid: 642438b5-f063-4c18-94bf-dd1052c54497
+        content: If you buy a put option on $100, and at expiration the market price is $115,
+        answerKeys:
+          - D
+        type: SingleChoice
+        choices:
+          - content: The call will be executed and trader earns a profit of $15 per share.
+            key: A
+          - content: The put will be executed and trader earns a profit of $15 per share.
+            key: B
+          - content: The call will not be executed and trader losses the premium.
+            key: C
+          - content: The put will not be executed and trader losses the premium..
             key : D
   
   - uuid: a585b6d4-1da8-4f87-8fd7-88233ea1b330
