--- a/src/intro-to-curve-dodao-academy.yaml
+++ b/src/intro-to-curve-dodao-academy.yaml
@@ -5,15 +5,14 @@ created: '2022-10-29T08:30:58.533Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: course
-key: into-to-curve-dodao-academy
-name: Into to Curve
+key: intro-to-curve-dodao-academy
+name: Intro to Curve
 publishStatus: Live
 showIncorrectOnCompletion: true
 steps:
   - content: >-
 
       ## Curve Intro
-
 
       Curve is a popular decentralized automated market maker focused on
       stablecoin swaps that helps you efficiently invest and exchange tokens
@@ -37,16 +36,54 @@ steps:
       DAI and USDC, but also ETH and sETH (synthetic ETH) or different versions
       of wrapped BTC.
 
+      ## Curve Pools
 
 
+      Curve pools are designed to allow the exchange of two or more tokens while
+      maintaining the StableSwap invariant. There are three main types of Curve
+      pools:
 
 
+      **Plain pools**: these pools pair two or more stablecoins against each
+      other.
+
+
+      **Lending pools**: these pools pair two or more wrapped tokens (e.g.,
+      cDAI) against each other, while the underlying is lent out on some other
+      protocol.
+      
+
+      **Metapools**: these pools pair a stablecoin against the LP token from
+      another pool.
+
+
+      Depositing coins into a Curve pool allows liquidity providers to receive
+      pool-specific LP tokens, which are ERC20 contracts. These tokens are
+      transferable, so holders of the LP tokens can stake them into a pool's
+      liquidity gauge to receive CRV token rewards. If the LP token is supported
+      by a metapool, it can be deposited into the metapool in exchange for the
+      metapool's LP token.
+      
           
+
+      ## Liquidity Providers
+
+
+      Liquidity providers are people who deposit tokens in liquidity pools.
+      Liquidity pools are like reservoirs for tokens that help create exchange
+      liquidity. Traders swap tokens within the liquidity pool, which in turn
+      creates buy and sell pressures that help determine token prices. AMM
+      algorithms work to efficiently price the tokens in the liquidity pool
+      according to various factors, such as buy and sell pressures driven by
+      traders. This system helps to create a more stable environment for tokens,
+      which is beneficial for both traders and liquidity providers. Liquidity
+      providers in return get a cut of trading fees and other boosted
+      rewards.         
     name: About Curve
     stepItems: []
     uuid: c95113e1-cc03-43c3-b9db-2c5ad107ed94
   - content: ''
-    name: ' Evaluation'
+    name: Evaluation
     stepItems:
       - answerKeys:
           - c3022c38
@@ -62,51 +99,6 @@ steps:
         content: How does curve finance overcome the problem of slippage
         type: SingleChoice
         uuid: 72c81038-e7bc-414f-97c9-bc586b20dfb7
-    uuid: b8d655fb-f975-4323-aa4d-e405efbcf8db
-  - content: "## Curve Pools\n\nCurve pools are designed to allow the exchange of two or more tokens while maintaining the StableSwap invariant. There are three main types of Curve pools:\n\n**Plain pools**: these pools pair two or more stablecoins against each other.\n\n**Lending pools**: these pools pair two or more wrapped tokens (e.g., cDAI) against each other, while the underlying is lent out on some other protocol.\n\n**Metapools**: these pools pair a stablecoin against the LP token from another pool.\n\nDepositing coins into a Curve pool allows liquidity providers to receive pool-specific LP tokens, which are ERC20 contracts. These tokens are transferable, so holders of the LP tokens can stake them into a pool's liquidity gauge to receive CRV token rewards. If the LP token is supported by a metapool, it can be deposited into the metapool in exchange for the metapool's LP token.\n\t\t\t\t\t\n"
-    name: Curve Pools
-    stepItems: []
-    uuid: 1587bb33-5844-498f-b7a3-476c9786c343
-  - content: ''
-    name: Evaluation
-    stepItems:
-      - answerKeys:
-          - bab1be53
-        choices:
-          - content: To control inflation
-            key: f57f97b3
-          - content: For convenient exchange/swap of tokens
-            key: bab1be53
-          - content: To control slippage
-            key: b73fd7f8
-          - content: To stop bribes
-            key: 277d9bd8
-        content: What is the purpose of creating cure pool ?
-        type: SingleChoice
-        uuid: 946d01a1-2589-4c87-a66c-1d20963ff109
-    uuid: 38b8af58-725a-44b2-b6a8-64a1f79da95e
-  - content: >+
-      ## Liquidity Providers
-
-
-      Liquidity providers are people who deposit tokens in liquidity pools.
-      Liquidity pools are like reservoirs for tokens that help create exchange
-      liquidity. Traders swap tokens within the liquidity pool, which in turn
-      creates buy and sell pressures that help determine token prices. AMM
-      algorithms work to efficiently price the tokens in the liquidity pool
-      according to various factors, such as buy and sell pressures driven by
-      traders. This system helps to create a more stable environment for tokens,
-      which is beneficial for both traders and liquidity providers. Liquidity
-      providers in return get a cut of trading fees and other boosted
-      rewards.         
-
-
-    name: Liquidity Providers
-    stepItems: []
-    uuid: 1bf9d6f1-197f-4787-98dc-0d4ba07b180d
-  - content: ''
-    name: Evaluation
-    stepItems:
       - answerKeys:
           - 2089a196
           - 273e81a1
@@ -123,8 +115,25 @@ steps:
         type: MultipleChoice
         uuid: 4e67b685-5729-4e4e-8975-720c4cf07af3
     uuid: ae4046d6-414c-43dc-98b1-964e38389c0a
-  - content: "## veCRV \n\nIn order to participate in Curve DAO governance, you must have a certain amount of CRV (veCRV) locked up in your account. veCRV is a non-standard ERC20 implementation, used by the Aragon DAO to calculate each account’s voting power.\n\nSince veCRV can't be transferred, the only way to obtain it is by locking up CRV. The maximum lock time is four years. For example, if you lock up one CRV for four years, you'll have an initial balance of one veCRV.\n\nHowever, as time goes on and the CRV unlock date gets closer, your veCRV balance will decay linearly. For example, a balance of 4000 CRV locked for one year provides the same amount of veCRV as 2000 CRV locked for two years, or 1000 CRV locked for four years\n\nveCRV tokens give you the opportunity to increase your rewards for offering liquidity on Curve. veCRV tokens allow you to earn up to 2.5x more on the liquidity you provide on Curve.\n\t\t\t\t\t\n\n"
-    name: 'veCRV '
+  - content: |
+      ## veCRV
+      In order to participate in Curve DAO governance, you must have a certain amount of CRV (veCRV) locked up in your account. veCRV is a non-standard ERC20 implementation, used by the Aragon DAO to calculate each account’s voting power.
+
+      Since veCRV can't be transferred, the only way to obtain it is by locking up CRV. The maximum lock time is four years. For example, if you lock up one CRV for four years, you'll have an initial balance of one veCRV.
+
+      However, as time goes on and the CRV unlock date gets closer, your veCRV balance will decay linearly. For example, a balance of 4000 CRV locked for one year provides the same amount of veCRV as 2000 CRV locked for two years, or 1000 CRV locked for four years
+
+      veCRV tokens give you the opportunity to increase your rewards for offering liquidity on Curve. veCRV tokens allow you to earn up to 2.5x more on the liquidity you provide on Curve.
+      
+      ## Rewards
+      Curve's most valuable accomplishment is that it gives people an incentive to contribute liquidity and earn rewards over their idle assets. One of the major incentives of CRV is the ability to boost the rewards on provided liquidity. Vote locking CRV allows you to acquire voting power to participate in the DAO voting and earn a boost of up to 2.5x on the liquidity you are providing on Curve. The goal is to incentivize users to participate in governance by rewarding them with a bigger share of the CRV inflation.This is a great way to increase your earnings and get more involved in the community.
+
+      When users lock their CRV tokens into the Curve DAO, they receive veCRV. The ratio of CRV to veCRV is not 1:1 and depends on how long the user locks their CRV tokens. If a user locks their CRV tokens for four years, they get the same amount of veCRV as the number of CRV tokens locked. If they lock for less than four years, then the number of veCRV tokens they get decreases linearly. So a user who locks their CRV tokens for two years would get half the amount of veCRV as the number of CRV tokens locked. The more veCRV a user has, the more boost they are eligible for.
+
+      The Curve DAO system is designed to keep the community engaged and informed on critical decisions, while also providing incentives for doing so. Locking your CRV into the Curve DAO is a great way to get more veCRV, boost your CRV rewards, and get trading fees..
+
+      Half of all trading fees go straight to the pockets of veCRV holders. This was set up in order to keep the interests of liquidity providers and governance participants (veCRV holders) aligned. The collected trading fees are used to buy 3CRV (the LP token for 3Pool) and distribute it among veCRV holders. This currently adds up to more than $15 million in trading fees per year. veCRV stands for vote escrowed $CRV, which is when $CRV votes are locked in the Curve DAO.
+    name: 'veCRV & Rewards'
     stepItems: []
     uuid: b74ebe60-cad9-4b99-a18e-744699815df5
   - content: ''
@@ -147,14 +156,6 @@ steps:
         content: 'Advantages of owning veCRV:'
         type: MultipleChoice
         uuid: 6f7478f3-c3d7-43fc-98f6-61a661c87f31
-    uuid: 90b8b356-55a2-4767-96fe-743cc86995a5
-  - content: "## Rewards\n\nCurve's most valuable accomplishment is that it gives people an incentive to contribute liquidity and earn rewards over their idle assets. One of the major incentives of CRV is  the ability to boost the rewards on provided liquidity. Vote locking CRV allows you to acquire voting power to participate in the DAO voting and earn a boost of up to 2.5x on the liquidity you are providing on Curve. The goal is to incentivize users to participate in governance by rewarding them with a bigger share of the CRV inflation.This is a great way to increase your earnings and get more involved in the community. \n\nWhen users lock their CRV tokens into the Curve DAO, they receive veCRV. The ratio of CRV to veCRV is not 1:1 and depends on how long the user locks their CRV tokens. If a user locks their CRV tokens for four years, they get the same amount of veCRV as the number of CRV tokens locked. If they lock for less than four years, then the number of veCRV tokens they get decreases linearly. So a user who locks their CRV tokens for two years would get half the amount of veCRV as the number of CRV tokens locked. The more veCRV a user has, the more boost they are eligible for.\n\nThe Curve DAO system is designed to keep the community engaged and informed on critical decisions, while also providing incentives for doing so. Locking your CRV into the Curve DAO is a great way to get more veCRV, boost your CRV rewards, and get trading fees.. \n\nHalf of all trading fees go straight to the pockets of veCRV holders. This was set up in order to keep the interests of liquidity providers and governance participants (veCRV holders) aligned. The collected trading fees are used to buy 3CRV (the LP token for 3Pool) and distribute it among veCRV holders. This currently adds up to more than $15 million in trading fees per year. veCRV stands for vote escrowed $CRV, which is when $CRV votes are locked in the Curve DAO.\t"
-    name: Rewards
-    stepItems: []
-    uuid: 526d33ad-adb7-40fd-9ece-65d9e0f90a2d
-  - content: ''
-    name: Evaluation
-    stepItems:
       - answerKeys:
           - '016e3941'
           - 4eb52fb4
@@ -171,7 +172,7 @@ steps:
         content: What rewards does curve finance offers?
         type: MultipleChoice
         uuid: bd40ea8c-4f77-4a15-98b5-0b17f98aa4f6
-    uuid: a863fb1d-53ad-48b9-b90c-981ff2453f40
+    uuid: 90b8b356-55a2-4767-96fe-743cc86995a5
   - content: >
       ## Liquidity Gauge
 
@@ -193,7 +194,7 @@ steps:
 
 
 
-      ## Gauge Weight Voting {#gauge-weight-voting}
+      ## Gauge Weight Voting
 
 
       Users can choose to invest their veCRV in one or more liquidity gauges.
@@ -202,30 +203,9 @@ steps:
       their preferences at any time. When a user applies a new weight vote, it
       takes effect at the beginning of the next epoch week. A weight vote for
       any one gauge cannot be changed more than once every 10 days.
-    name: ' Liquidity Gauge '
-    stepItems: []
-    uuid: 79d535f2-4b7b-472f-9bfc-4b7f9da92225
-  - content: ''
-    name: Evaluation
-    stepItems:
-      - answerKeys:
-          - ef3ef46e
-          - 3862dce1
-          - '91374831'
-        choices:
-          - content: Current Inflation rate
-            key: '91374831'
-          - content: Randomly
-            key: c2ebbc60
-          - content: Gauge weght
-            key: 3862dce1
-          - content: VeCRV votes
-            key: ef3ef46e
-        content: On what basis are newly minted veCRV distributed to various gauges
-        type: MultipleChoice
-        uuid: 02502c1d-f77b-43c3-bfd8-5b89d0d03ef9
-    uuid: 9362c575-158a-4992-929d-4fcf7a297977
-  - content: >-
+
+
+
       ## Bribes
 
       Curve.fi uses gauge weights to determine how much CRV each pool gets. The
@@ -253,12 +233,28 @@ steps:
       increasing your APY and one can generate more returns through bribing. 
       Here is the example of Unit Protocol distributing bribes on Curve
       [https://docs.unit.xyz/guides-1/bribes-on-curve.fi](https://docs.unit.xyz/guides-1/bribes-on-curve.fi) 
-    name: Bribes
+    name: Liquidity Gauges and CRV Rewards
     stepItems: []
     uuid: f714a22a-0ab8-48ae-aa46-d574e9775830
   - content: ''
     name: Evaluation
     stepItems:
+      - answerKeys:
+          - ef3ef46e
+          - 3862dce1
+          - '91374831'
+        choices:
+          - content: Current Inflation rate
+            key: '91374831'
+          - content: Randomly
+            key: c2ebbc60
+          - content: Gauge weight
+            key: 3862dce1
+          - content: VeCRV votes
+            key: ef3ef46e
+        content: On what basis are newly minted veCRV distributed to various gauges
+        type: MultipleChoice
+        uuid: 02502c1d-f77b-43c3-bfd8-5b89d0d03ef9
       - answerKeys:
           - a2e59bb3
         choices:
@@ -288,9 +284,28 @@ steps:
       rewards allocated to particular pools are decided by voting conducted
       every week. This voting is badly influenced by bribes. Thereby allocating
       more rewards to the pool of big players with more veCRV.
-    name: 'Pain Points in Curve '
+
+
+
+      ## Convex Intro
+
+
+      Convex Finance is a protocol built on top of Curve Finance in order to
+      make yield farming much easier for stakers and to automatically get
+      boosted rewards,it also provides a way to keep your locked CRV tokens
+      unlocked through the cvxCRV tokens. Instead of staking CRV on Curve
+      Finance, you can stake your CRV on Convex Finance and receive all of the
+      boosted rewards and benefits. You can stake your LP 3Pool Curve (3CRV)
+      tokens on Convex Finance for even more benefits. If you have already
+      provided liquidity for Curve Finance, you can collect your 3CRV LP tokens
+      and stake them on Convex Finance. As there are extra benefits for staking
+      LP tokens. CVX is a convex governance token that can be staked in order to
+      earn rewards.It is more convenient to stake your curve on convex and
+      receive benefits like returns from trade fees in the liquidity pools, as
+      well as returns from providing liquidity to those pools.
+    name: Cuve & Convex
     stepItems: []
-    uuid: bfe02cf7-6f5e-4be1-be1a-dbea864d3970
+    uuid: 9ebe2a8b-3c63-4952-8a95-d2af6fb216e3
   - content: ''
     name: Evaluation
     stepItems:
@@ -310,30 +325,6 @@ steps:
         content: 'Loopholes in curve finance:'
         type: MultipleChoice
         uuid: f4564d07-9c25-4104-b205-911e082e7612
-    uuid: 615999e0-8567-423e-a20f-36e6e47a4483
-  - content: >
-      ## Convex Intro 
-
-
-      Convex Finance is a protocol built on top of Curve Finance in order to
-      make yield farming much easier for stakers and to automatically get
-      boosted rewards,it also provides a way to keep your locked CRV tokens
-      unlocked through the cvxCRV tokens. Instead of staking CRV on Curve
-      Finance, you can stake your CRV on Convex Finance and receive all of the
-      boosted rewards and benefits. You can stake your LP 3Pool Curve (3CRV)
-      tokens on Convex Finance for even more benefits. If you have already
-      provided liquidity for Curve Finance, you can collect your 3CRV LP tokens
-      and stake them on Convex Finance. As there are extra benefits for staking
-      LP tokens. CVX is a convex governance token that can be staked in order to
-      earn rewards.It is more convenient to stake your curve on convex and
-      receive benefits like returns from trade fees in the liquidity pools, as
-      well as returns from providing liquidity to those pools.
-    name: Convex Intro
-    stepItems: []
-    uuid: 9ebe2a8b-3c63-4952-8a95-d2af6fb216e3
-  - content: ''
-    name: Evaluation
-    stepItems:
       - answerKeys:
           - 4338d473
           - 93a09a97
@@ -354,4 +345,4 @@ steps:
     uuid: d0992c2c-f31c-4624-b94f-b6866efc65b5
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: into-to-curve-dodao-academy
+uuid: intro-to-curve-dodao-academy
