--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -2,3 +2,4 @@ guides:
   - intro-to-options-dodao-academy.yaml
   - intro-to-curve-dodao-academy.yaml
   - intro-to-futures-dodao-academy.yaml
+  - vemodel-vote-escrowed-dodao-academy.yaml
