--- a/src/vemodel-vote-escrowed-dodao-academy.yaml
+++ b/src/vemodel-vote-escrowed-dodao-academy.yaml
@@ -1,49 +1,34 @@
 categories:
   - governance
 content: Explains the reasoning behind Vote Escrowed Tokenomics
-created: '2022-10-30T11:05:48.127Z'
+created: '2022-10-31T08:26:18.121Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
 key: vemodel-vote-escrowed-dodao-academy
-name: 'Vote Escrowed Tokenomics '
+name: 'VeModel - Vote Escrowed '
 publishStatus: Live
 showIncorrectOnCompletion: true
 steps:
-  - content: >-
+  - content: |-
 
-      Introduction Comments 
+      URLs
+
+      Unlocking the veModel
+       - https://medium.com/balancer-protocol/unlocking-the-vemodel-f363d2d7bd91
+
+      veBAL Is Live!
+       - https://medium.com/balancer-protocol/vebal-is-live-aeda1ae13e20
 
 
-      Take contents from -
-      https://medium.com/balancer-protocol/unlocking-the-vemodel-f363d2d7bd91        
+      veBAL — How to Increase your Benefits
+       - https://medium.com/balancer-protocol/vebal-how-to-increase-your-benefits-b51daf6458a8
+
+
+              
     name: Introduction
     stepItems: []
     uuid: 863bbca5-7c01-484d-b115-7568a6998eb6
-  - content: ''
-    name: Introduction Evaluation
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: e39ea520-f07c-437c-828c-85da095af376
-      - answerKeys:
-          - dog_or_cat
-          - only_dog
-          - only_cat
-        choices:
-          - content: Dog And Cat
-            key: dog_and_cat
-          - content: Dog Or Cat
-            key: dog_or_cat
-          - content: Only Dog
-            key: only_dog
-          - content: Only Cat
-            key: only_cat
-        content: Dog or a Cat, Do or a Cat, Dog or a Cat
-        type: MultipleChoice
-        uuid: be8e675f-0036-480c-9465-e20586ee1614
-    uuid: 4413ceb3-1179-4db0-b742-88f0cf9960ea
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
 uuid: vemodel-vote-escrowed-dodao-academy
