--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -3,3 +3,4 @@ guides:
   - intro-to-curve-dodao-academy.yaml
   - intro-to-futures-dodao-academy.yaml
   - vemodel-vote-escrowed-dodao-academy.yaml
+  - gauges-and-bribes-in-crv-and-bal-dodao-academy.yaml
