--- a/src/vemodel-vote-escrowed-dodao-academy.yaml
+++ b/src/vemodel-vote-escrowed-dodao-academy.yaml
@@ -1,7 +1,7 @@
 categories:
   - governance
-content: Explains the reasoning behind Vote Escrowed Tokenomics
-created: '2022-11-02T11:12:04.970Z'
+content: What is Vote Escrowed Tokenomics and its benefits
+created: '2022-11-02T11:12:39.983Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
