--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -4,3 +4,4 @@ guides:
   - intro-to-futures-dodao-academy.yaml
   - vemodel-vote-escrowed-dodao-academy.yaml
   - gauges-and-bribes-in-crv-and-bal-dodao-academy.yaml
+  - yieldinterest-bearing-tokens-dodao-academy.yaml
