update guide Yield Bearing Tokens

--- a/src/yieldinterest-bearing-tokens-dodao-academy.yaml
+++ b/src/yieldinterest-bearing-tokens-dodao-academy.yaml
@@ -1,11 +1,11 @@
 categories: []
 content: New Guide
-created: '2022-11-07T15:48:06.412Z'
+created: '2022-11-07T21:20:25.642Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: course
 key: yieldinterest-bearing-tokens-dodao-academy
-name: Yield/Interest Bearing Tokens
+name: Yield Bearing Tokens
 publishStatus: Live
 showIncorrectOnCompletion: true
 steps:
