update guide Voting Strategies

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -5,3 +5,4 @@ guides:
   - vemodel-vote-escrowed-dodao-academy.yaml
   - gauges-and-bribes-in-crv-and-bal-dodao-academy.yaml
   - yieldinterest-bearing-tokens-dodao-academy.yaml
+  - voting-strategies-dodao-academy.yaml
