update guide DAO Treasury

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -6,3 +6,4 @@ guides:
   - gauges-and-bribes-in-crv-and-bal-dodao-academy.yaml
   - yieldinterest-bearing-tokens-dodao-academy.yaml
   - voting-strategies-dodao-academy.yaml
+  - dao-treasury-dodao-academy.yaml
