--- a/src/intro-to-futures-dodao-academy.yaml
+++ b/src/intro-to-futures-dodao-academy.yaml
@@ -467,6 +467,5 @@ steps:
     name: Futures vs Options
     stepItems: []
     uuid: 7d98487d-70e6-42f6-90a9-ad1b57b7ddaa
-thumbnail: >-
-  https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
+thumbnail: https://d31h13bdjwgzxs.cloudfront.net/academy/dodao/guides/intro_to_futures.png
 uuid: intro-to-futures-dodao-academy
