--- a/src/intro-to-options-dodao-academy.yaml
+++ b/src/intro-to-options-dodao-academy.yaml
@@ -10,7 +10,7 @@ key: intro-to-options-dodao-academy
 name: Intro to Options
 publishStatus: Live
 showIncorrectOnCompletion: true
-thumbnail: https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
+thumbnail: https://d31h13bdjwgzxs.cloudfront.net/academy/dodao/guides/intro_to_options.png
 steps:
   - uuid: 6582f081-3523-4249-849c-1b6cd640eca3
     name: Intro to Options and Its Use Cases
