--- a/src/voting-strategies-dodao-academy.yaml
+++ b/src/voting-strategies-dodao-academy.yaml
@@ -14,6 +14,5 @@ steps:
     name: Introduction
     stepItems: []
     uuid: 1888d42c-98fe-4b3d-a425-26b258ef8cb9
-thumbnail: >-
-  https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
+thumbnail: https://d31h13bdjwgzxs.cloudfront.net/academy/dodao/guides/voting_strategies.png
 uuid: 871bdd53-54c0-4719-bfe5-4dcca90fc30a
