--- a/src/intro-to-curve-dodao-academy.yaml
+++ b/src/intro-to-curve-dodao-academy.yaml
@@ -343,6 +343,5 @@ steps:
         type: MultipleChoice
         uuid: a2d5adc9-bd32-4ba7-9451-531ac7a442f5
     uuid: d0992c2c-f31c-4624-b94f-b6866efc65b5
-thumbnail: >-
-  https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
+thumbnail: https://d31h13bdjwgzxs.cloudfront.net/academy/dodao/guides/curve.png
 uuid: intro-to-curve-dodao-academy
