update guide Intro to Uniswap

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -7,3 +7,4 @@ guides:
   - yieldinterest-bearing-tokens-dodao-academy.yaml
   - voting-strategies-dodao-academy.yaml
   - dao-treasury-dodao-academy.yaml
+  - intro-to-uniswap-dodao-academy.yaml
