--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -8,3 +8,4 @@ guides:
   - voting-strategies-dodao-academy.yaml
   - dao-treasury-dodao-academy.yaml
   - intro-to-uniswap-dodao-academy.yaml
+  - proof-of-reserves-dodao-academy.yaml
