--- a/src/intro-to-uniswap-dodao-academy.yaml
+++ b/src/intro-to-uniswap-dodao-academy.yaml
@@ -154,7 +154,7 @@ steps:
 
     stepItems:
       - uuid: 26736f95-33ca-444f-9aa2-905ac6b8cdd3
-        content: Uniswap LPs are facing huge losses primarily due to -
+        content: Uniswap LPs can face significant losses primarily due to -
         answerKeys:
           - A
         type: SingleChoice
