update guide Keeping your Crypto Safe

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -9,3 +9,4 @@ guides:
   - dao-treasury-dodao-academy.yaml
   - intro-to-uniswap-dodao-academy.yaml
   - proof-of-reserves-dodao-academy.yaml
+  - keeping-your-crypto-safe-dodao-academy.yaml
