update guide Custodian vs Non Cust. Wallet

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -10,3 +10,4 @@ guides:
   - intro-to-uniswap-dodao-academy.yaml
   - proof-of-reserves-dodao-academy.yaml
   - keeping-your-crypto-safe-dodao-academy.yaml
+  - custodian-vs-non-cust-wallet-dodao-academy.yaml
