--- a/src/custodian-vs-non-cust-wallet-dodao-academy.yaml
+++ b/src/custodian-vs-non-cust-wallet-dodao-academy.yaml
@@ -1,7 +1,7 @@
 categories:
   - general
 content: Educates about the difference and talks about pros and cons
-created: '2022-11-21T19:54:25.295Z'
+created: '2022-11-21T20:01:55.812Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -154,6 +154,112 @@ steps:
     name: Custodial Wallets
     stepItems: []
     uuid: 58dd8e44-0ba1-4ede-8666-c62f4a142a62
+  - content: >-
+      ## Non Custodial Wallets
+
+      Non-custodial wallets have a big advantage over custodial wallets - with
+      non-custodial wallets, the private key is with the user and no one else.
+      The user retains complete control over their wallet at all times. This
+      limits the potential for misuse/control of your private keys, and in
+      extension, your funds by some third party entity. 
+
+
+      This improves safety since you are no longer counting on the third party
+      having good security measures in order to protect your funds. This also
+      means that no central entity can control who you can and cannot transfer
+      assets to.
+
+
+      In 2022, many exchanges went bankrupt, causing customers to lose their
+      funds. However, users who had their crypto in non-custodial wallets were
+      safe.
+
+
+      Although non-custodial wallets have many benefits, there are also some
+      drawbacks that users should be aware of:
+
+
+      1.  If you lose your private key, you lose your funds. This has happened
+      to many individuals and once the private key is lost, there is no way of
+      retrieving your funds.
+
+      2. The user can write their private keys on a piece of paper, but the
+      issue is that it is easily destructible, easy to lose, and can be read by
+      anyone.
+
+      3. Many non-custodial wallets are susceptible to hacks.
+
+      4.  Many non-custodial wallets store private keys on your personal laptop
+      or mobile device. If a hacker were to gain access to your laptop or phone,
+      they would also have access to your sensitive private keys.
+
+      5. Inheritance can be a difficult process with non-custodial wallets. If
+      most of your life savings are stored in a non-custodial wallet, how can
+      you be sure that your loved ones will be able to inherit your funds after
+      you pass away?
+
+
+      Non custodial wallets also come in multiple flavours
+
+
+
+      1. Hot Storage – Private key is held online
+
+      2. Cold Storage – Private key is held offline
+
+      3. Hardware Wallet – Private key is held offline on a physical device
+
+
+      There are currently two types of accounts in Ethereum:
+
+
+      1. Externally owned accounts (EOAs) - these are controlled by private keys
+
+      2. Smart contract accounts - these are controlled by code
+
+
+      So far we have only discussed EOAs, which can hold funds. However, it is
+      also possible for smart contracts to hold and send funds. This is the
+      beauty of Ethereum - something that is not possible in the current
+      financial world.
+
+
+      We can create smart programs which act as user accounts, otherwise known
+      as smart contracts. These smart contracts can have different logic and
+      conditions based on the user's needs. For example, we can have logic to
+      limit the amount of withdrawals, or time-based limitations, or any other
+      complex logic.
+
+
+      Smart contract wallets, or "smart wallets", are simply smart contracts
+      that behave like a wallet. This means they provide users with an interface
+      to manage their funds, sign in with web3, and interact with dapps. Unlike
+      private key wallets, smart wallets come with an initial cost to create, as
+      a smart contract needs to be deployed on-chain.
+
+
+      Multi-signature smart contract wallets are becoming increasingly popular
+      as they require the signature from M-of-N keys to execute a transaction.
+      This adds a layer of security and also protects the user in case they
+      loose their private keys.This is quite reassuring for users. 
+
+
+      In addition, there are now a few non-custodial wallets that hide the
+      complexity of dealing with a private key away from the user. These wallets
+      still use the public/private key pair, but the details of how the private
+      key is stored and retrieved are abstracted away from the users. Some of
+      these wallets are Argent, ZenGo, Ambire, and Web3Auth.
+
+
+      There is another type of cryptographic wallet called a Multi-Party
+      Computation (MPC) enabled wallet. With this type of wallet, the shares or
+      parts of the private key are distributed to a group of people. In order
+      for a transaction to be signed, M-of-N users need to sign it with their
+      own share of the private key. This is quite different from a Smart
+      Contract wallet, but it has some of the same advantages.
+    name: Non Custodial Wallets
+    stepItems: []
+    uuid: 48d8f905-34fd-447e-9131-6c3549fcf281
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
 uuid: custodian-vs-non-cust-wallet-dodao-academy
